test/Fail/BuiltinMustBeDef.agda
open import Agda.Builtin.Nat

module _ (fromNat : Nat) where

{-# BUILTIN FROMNAT fromNat #-}
